# vision3d

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yaml  ci.yaml  docs.yaml  lint.yaml  pre-commit.yaml  release.yaml  test.yaml
.zed/: settings.json
docs/: Makefile  make.bat
docs/source/: conf.py  index.md  index.rst
docs/source/_ext/: gfm_admonitions.py  rerun_embed.py  rerun_scraper.py
docs/source/_static/: rerun_embed.css  rerun_embed.js
docs/source/api/: index.md  index.rst
examples/: visualize_kitti.py  visualize_nuscenes.py  visualize_transforms.py
fixtures/torch/: __init__.pyi  linalg.pyi
fixtures/torch/nn/: __init__.pyi  functional.pyi
fixtures/torch/optim/: __init__.pyi
gallery/: README.rst
gallery/datasets/: README.rst  plot_kitti.py  plot_nuscenes.py
gallery/transforms/: README.rst  plot_transforms.py
gallery/viz/: README.rst  plot_metrics.py  plot_predictions.py
src/vision3d/: __init__.py  _extension.py
src/vision3d/datasets/: __init__.py  _types.py  collate.py  kitti.py  nuscenes.py
src/vision3d/metrics/: __init__.py  _mean_average_precision_3d.py  _nuscenes_detection_score.py  _types.py
src/vision3d/ops/: __init__.py  _box3d_convert.py  _box3d_corners.py  _box3d_iou.py  _box3d_iou_autograd.py  _box3d_iou_bev.py  _box3d_overlap.py  _meta_registrations.py  _nms_3d.py  _points_in_boxes_3d.py  _project.py  _voxelize.py  boxes3d.py
src/vision3d/ops/csrc/: iou_box3d.cpp  register.cpp  voxelize.cpp
src/vision3d/ops/csrc/iou_box3d/: iou_box3d.cu  iou_box3d.h  iou_box3d_backward.cu  iou_box3d_backward_cpu.cpp  iou_box3d_cpu.cpp  iou_utils.cuh  iou_utils.h
src/vision3d/ops/csrc/utils/: float_math.cuh  pytorch3d_cutils.h  vec3.h
src/vision3d/ops/csrc/voxelize/: voxelize.cu  voxelize.h  voxelize_cpu.cpp
src/vision3d/tensors/: __init__.py  _bounding_boxes_3d.py  _camera.py  _cylinders_3d.py  _point_cloud_3d.py  _wrap.py
src/vision3d/transforms/: __init__.py  _box_filter.py  _copy_paste_3d.py  _geometry.py  _object_min_points_filter.py  _point_cloud.py  _range_filter.py  _transform.py  _utils.py  v2.py
src/vision3d/transforms/functional/: __init__.py  _camera.py  _geometry.py  _point_cloud.py  _registry.py  _sweeps.py  _utils.py
src/vision3d/viz/: __init__.py  _blueprint.py  _errors.py  _logger.py  _logging.py  _rerun.py  _scalars.py  _scene.py
test/: common_utils.py  conftest.py  test_bounding_boxes_3d.py  test_camera.py  test_copy_paste_3d.py  test_datasets.py  test_iou_box3d_pytorch3d.py  test_metrics_map3d.py  test_metrics_nds.py  test_nuscenes.py  test_ops.py  test_ops_box3d_corners.py  test_ops_box3d_iou.py  test_ops_box3d_iou_bev.py  test_ops_box3d_overlap.py  test_ops_nms_3d.py  test_ops_points_in_boxes.py  test_ops_project.py  test_ops_voxelize.py  test_point_cloud_3d.py  test_registry.py  test_transforms.py  test_transforms_compose.py  test_transforms_object_min_points_filter.py  test_transforms_object_points_sample.py  test_transforms_point_cloud.py  test_transforms_range_filter.py  test_transforms_sweeps.py  test_transforms_v2.py  test_tv_kernels.py  test_utils.py  test_viz_logger.py  test_viz_logging.py  test_viz_scalars.py  test_viz_scene.py
