[project]
name = "vision3d"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Peter Siegel", email = "psiegel2000@icloud.com" }]
dependencies = [
  "torch>=2.10",
  "torchvision>=0.25",
  "typing-extensions>=4.13; python_version < '3.13'",
]

[project.optional-dependencies]
nuscenes = [
  "nuscenes-devkit>=1.1.9",
]
viz = [
  "rerun-sdk>=0.31.1",
]

[dependency-groups]
dev = [
  "pyrefly>=0.59.1",
  "pytest>=9.0.2",
  "ruff>=0.15.9",
]

[build-system]
requires = ["setuptools<82", "torch>=2.10", "numpy>=2"]
build-backend = "setuptools.build_meta"

[tool.pyrefly]
min-severity = "ignore"
search-path = ["examples", "test"]

[tool.pyrefly.errors]
# Pyrefly does not yet have a strict mode, so we manually set all diagnostics
# with "ignore" severity levels to "warn".
implicit-abstract-class = "warn"
implicit-any = "warn"
implicitly-defined-attribute = "warn"
missing-override-decorator = "warn"
missing-source = "warn"
not-required-key-access = "warn"
open-unpacking = "warn"
unannotated-attribute = "warn"
unannotated-parameter = "warn"
unannotated-return = "warn"
untyped-import = "warn"
unused-ignore = "warn"

[tool.ruff.lint]
preview = true
extend-select = ["D", "DOC", "PT", "TC"]
ignore = [
  "D104",  # TODO: remove, missing docstring in placeholder __init__.py packages
  "D107",  # __init__ args documented in class docstring (Google style)
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["D"]
"examples/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
filterwarnings = [
  # Unrelated warning from ``@torch.jit.script_method`` in torch/utils/mkldnn.py.
  "ignore:.*torch\\.jit\\.script_method.*:DeprecationWarning",
]
