[project]
name = "vision3d"
description = "A 3D extension of torchvision."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Peter Siegel" }]
dependencies = [
  "numpy",
  "pillow>=11.3",
  "torch>=2.10",
  "torchvision>=0.25",
  "typing-extensions>=4.13; python_version < '3.13'",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yeetypete/vision3d"
Issues = "https://github.com/yeetypete/vision3d/issues"
Repository = "https://github.com/yeetypete/vision3d"

[project.optional-dependencies]
viz = [
  "rerun-sdk>=0.31.1",
]

[dependency-groups]
dev = [
  "hypothesis>=6.152.7",
  "nuscenes-devkit>=1.2.0",
  "pyrefly>=0.59.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.9",
  "types-docutils>=0.21",
  "types-setuptools>=80",
]
docs = [
  "myst-parser>=5.0.0",
  "pydata-sphinx-theme>=0.17.0",
  "sphinx>=9.1.0",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-gallery>=0.21.0",
]

[build-system]
# The `<82` upper bound mirrors torch's own `Requires-Dist: setuptools<82`.
# Setuptools 82 removed `pkg_resources`, which the torch build path still
# relies on.
requires = ["numpy>=2", "setuptools>=77,<82", "torch>=2.10"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["vision3d"]
branch = true

[tool.pyrefly]
min-severity = "ignore"
search-path = ["examples", "test", "gallery", "docs/source/_ext"]

[tool.pyrefly.errors]
# Pyrefly does not yet have a strict mode, so we manually set all diagnostics
# with "ignore" severity levels to "warn".
implicit-abstract-class = "warn"
implicit-any = "warn"
implicitly-defined-attribute = "warn"
missing-override-decorator = "warn"
missing-source = "warn"
not-required-key-access = "warn"
open-unpacking = "warn"
unannotated-attribute = "warn"
unannotated-parameter = "warn"
unannotated-return = "warn"
untyped-import = "warn"
unused-ignore = "warn"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --strict-markers"
filterwarnings = [
  # Unrelated warning from `@torch.jit.script_method` in torch/utils/mkldnn.py.
  "ignore:.*torch\\.jit\\.script_method.*:DeprecationWarning",
]

[tool.ruff.lint]
preview = true
extend-select = ["D", "DOC", "PT", "TC"]
ignore = [
  "D107",  # constructor args documented in the class docstring, not __init__
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["D"]
"examples/**" = ["D"]
"gallery/**" = ["D", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
# The PyTorch wheel index (download.pytorch.org/whl/cuXXX) mirrors only
# setuptools 70.x, which predates PEP 639 SPDX-string licenses. Use
# `unsafe-first-match` so the resolver exhausts the user-supplied
# `--index <pytorch>` first (keeping torch on the requested CUDA variant)
# and only falls through to PyPI for build dependencies that no version on
# the PyTorch mirror can satisfy (i.e. `setuptools>=77`).
index-strategy = "unsafe-first-match"
# Fix `nuscenes-devkit`'s stale pins: `Shapely~=2.0.3` has no Python 3.14
# wheels, and `numpy<2.0.0` conflicts with our `numpy>=2`.
override-dependencies = [
  "shapely>=2.1",
  "numpy>=2",
]
